[package]
name = "ggg"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/godotneers/ggg"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "6"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
toml_edit = { version = "0.22", features = ["serde"] }
tempfile = "3"
zip = "2"
tar = "0.4"
flate2 = "1"
gix = { version = "0.81.0", features = ["blocking-http-transport-reqwest", "blocking-http-transport-reqwest-native-tls", "blocking-network-client", "attributes"] }
sha2 = "0.10"
diffy = "0.3"
globset = "0.4"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
